I got so mad about provisioning profiles I don't remember what these changes where

--- a/ShoppingList/View/MainPage.xaml
+++ b/ShoppingList/View/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:ShoppingList.Model"
              xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
+             xmlns:skiasharp="clr-namespace:SkiaSharp.Extended.UI.Controls;assembly=SkiaSharp.Extended.UI"
              x:DataType="viewmodel:UserListViewModel"
              Title="{Binding Title}"
              BackgroundColor="{DynamicResource Secondary}"
@@ -55,6 +56,23 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
+
+        <skiasharp:SKLottieView x:Name="CartLottie"
+	                            WidthRequest="300"
+				                HeightRequest="300"
+                                Grid.Row="0"
+                                RepeatCount="0"
+                                RepeatMode="Restart"
+                                Opacity=".5"
+                                ZIndex="-1"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                VerticalOptions="End"
+                                HorizontalOptions="Center"
+				                Source="69114-shopping-cart.json"
+				                BackgroundColor="Transparent">
+        </skiasharp:SKLottieView>
+       
         <Button Text="Get UserLists"
                 Command="{Binding GetUserListsCommand}"
                 IsEnabled="{Binding IsNotBusy}"
