--- a/ShoppingList/View/SettingsView.xaml
+++ b/ShoppingList/View/SettingsView.xaml
@@ -61,7 +61,7 @@
             </HorizontalStackLayout>
         
             <Border BackgroundColor="{DynamicResource Primary}" Margin="0,25,0,0">
-                <Label Text="List Sorting Settings" 
+                <Label Text="Other Settings" 
                        Margin="5,15,15,15"
                        Padding="10"/>
             </Border>
