--- a/ShoppingList/View/SettingsView.xaml
+++ b/ShoppingList/View/SettingsView.xaml
@@ -78,6 +78,7 @@
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         IsVisible="True"
+                                        BackgroundColor="Transparent"
                                         Margin="25,0,0,25"
                                         x:Name="Nautical">
 
@@ -91,6 +92,7 @@
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         Margin="25,0,0,25"
+                                        BackgroundColor="Transparent"
                                         x:Name="Neon">
 
                     <control:CircularButton.GestureRecognizers>
@@ -103,6 +105,7 @@
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         Margin="25,0,0,25"
+                                        BackgroundColor="Transparent"
                                         x:Name="Striking">
 
                     <control:CircularButton.GestureRecognizers>
@@ -115,6 +118,7 @@
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         Margin="25,0,0,25"
+                                        BackgroundColor="Transparent"
                                         x:Name="Muted">
 
                     <control:CircularButton.GestureRecognizers>
@@ -127,6 +131,7 @@
                                         WidthRequest="30"
                                         HeightRequest="30"
                                         Margin="25,0,0,25"
+                                        BackgroundColor="Transparent"
                                         x:Name="Pretty">
 
                     <control:CircularButton.GestureRecognizers>
