--- a/ShoppingList/View/UserListDataInput.xaml
+++ b/ShoppingList/View/UserListDataInput.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:ShoppingList.Model"
              xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
+             xmlns:controls="clr-namespace:ShoppingList.Controls"
              x:DataType="viewmodel:UserListDataInputViewModel"
              x:Class="ShoppingList.UserListDataInput"
              BackgroundColor="{DynamicResource Secondary}"
@@ -18,28 +19,31 @@
 
 
             <Entry Text="{Binding UlName}" 
-                   MaxLength="20"
+                   TextColor="{DynamicResource Accent}"
+                   MaxLength="40"
                    Style="{DynamicResource CommonEntryStyle}"
                    ReturnCommand="{Binding UserListCompletedCommand}"
-                   Placeholder="List Name"/>
+                   Placeholder="List Name"
+                   PlaceholderColor="{DynamicResource Accent}"/>
 
-            <Entry Text="{Binding UlTargetStore}"
+            <!--<Entry Text="{Binding UlTargetStore}"
+                   TextColor="{DynamicResource Accent}"
                    MaxLength="20"
                    Style="{DynamicResource CommonEntryStyle}"
                    Placeholder="The Store you want to use this list for?"
-                   ReturnCommand="{Binding UserListCompletedCommand}"/>
+                   ReturnCommand="{Binding UserListCompletedCommand}"/>-->
 
 
             <HorizontalStackLayout
                 Grid.ColumnSpan="2">
 
                 <Label Text="Type of List: "
-                      TextColor="{DynamicResource Primary}"
+                      TextColor="{DynamicResource Accent}"
                        Margin="0,5,5,0"/>
                 
                 <Picker ItemsSource="{Binding TypeList}"
                         SelectedIndexChanged="Picker_SelectedIndexChanged"
-                        TextColor="{DynamicResource Primary}"
+                        TextColor="{DynamicResource Accent}"
                         FontSize="15"
                         SelectedIndex="1"
                         x:Name="TypeOfListPicker"
@@ -50,33 +54,53 @@
 
             <HorizontalStackLayout>
                 <Label Text="Pre-populate list with Items from last time?"
-                          TextColor="{DynamicResource Tertiary}"
+                          TextColor="{DynamicResource Accent}"
                        Padding="10"/>
                 
                 <CheckBox IsChecked="{Binding PrepopulateList, Mode=TwoWay}"
-                          Color="{DynamicResource Tertiary}"
+                          Color="{DynamicResource Accent}"
                           CheckedChanged="CheckBox_CheckedChanged"/>
                 
             </HorizontalStackLayout>
             
         </StackLayout>
 
+            <controls:CircularButton  
+			            Grid.Row="0"
+			            Grid.Column="0"
+                        x:Name="Cancel"
+                        Margin="25,25,25,25"
+                        WidthRequest="75"
+                        HeightRequest="75"
+                        ButtonColor="{DynamicResource Tertiary}"
+                        BackgroundColor="Transparent"
+                        Image="x.png"
+                        VerticalOptions="End"
+                        HorizontalOptions="Start"
+			            >
+                <controls:CircularButton.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding CancelCommand}"/>
+                </controls:CircularButton.GestureRecognizers>
+            </controls:CircularButton>
 
-        <Button Text="Cancel"
-                    IsEnabled="True"
-                    Command="{Binding CancelCommand}"
-                    BackgroundColor="{DynamicResource Primary}"
-                    Margin="8"
-                    Grid.Row="1"
-                    Grid.Column="0"/>
-
-        <Button Text="Create New List"
-                    IsEnabled="True"
-                    Command="{Binding UserListCompletedCommand}"
-                    BackgroundColor="{DynamicResource Primary}"
-                    Margin="8"
-                    Grid.Column="1"
-                Grid.Row="1"/>
+        
+            <controls:CircularButton  
+			            Grid.Row="0"
+			            Grid.Column="2"
+                        x:Name="NewItemButton"
+                        Margin="25,25,25,25"
+                        WidthRequest="75"
+                        HeightRequest="75"
+                        ButtonColor="{DynamicResource Tertiary}"
+                        BackgroundColor="Transparent"
+                        Image="check.png"
+                        VerticalOptions="End"
+                        HorizontalOptions="End"
+			            >
+                <controls:CircularButton.GestureRecognizers>
+                    <TapGestureRecognizer Command="{Binding UserListCompletedCommand}"/>
+                </controls:CircularButton.GestureRecognizers>
+            </controls:CircularButton>
     </Grid>
 
 
