Added a bounce animation to circular buttons

--- a/ShoppingList/View/MainPage.xaml
+++ b/ShoppingList/View/MainPage.xaml
@@ -91,7 +91,7 @@
                         HorizontalOptions="End"
 			            >
                 <GraphicsView.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding CreateUserListCommand}"/>
+                    <TapGestureRecognizer Tapped="NewListButtonPressed"/>
 
                 </GraphicsView.GestureRecognizers>
             </controls:CircularButton>
